<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/huatougui"
    android:orientation="vertical"
    android:paddingLeft="@dimen/main_parent_layout_paddingLeft"
    android:paddingRight="@dimen/main_parent_layout_paddingRight"
    android:paddingTop="@dimen/main_parent_layout_paddingTop"
    android:paddingBottom="@dimen/main_parent_layout_paddingBottom">


    <Button
        android:id="@+id/mgtv_btn1"
        android:layout_width="@dimen/main_button_layout_width"
        android:layout_height="@dimen/main_button_layout_height"
        android:layout_marginLeft="@dimen/main_button_layout_marginLeft"
        android:layout_marginTop="@dimen/main_button_layout_marginTop"
        android:textSize="@dimen/main_button_textSize"
        android:background="@drawable/common_btn_background"
        android:gravity="center"
        android:text="@string/vlc"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mgtv_btn2"
        android:layout_width="@dimen/main_button_layout_width"
        android:layout_height="@dimen/main_button_layout_height"
        android:layout_marginLeft="@dimen/main_button_layout_marginLeft"
        android:layout_marginTop="@dimen/main_button_layout_child_marginTop"
        android:textSize="@dimen/main_button_textSize"
        android:layout_below="@+id/mgtv_btn1"
        android:background="@drawable/common_btn_background"
        android:gravity="center"
        android:text="@string/exo"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mgtv_btn3"
        android:layout_width="@dimen/main_button_layout_width"
        android:layout_height="@dimen/main_button_layout_height"
        android:layout_marginLeft="@dimen/main_button_layout_marginLeft"
        android:layout_marginTop="@dimen/main_button_layout_child_marginTop"
        android:textSize="@dimen/main_button_textSize"
        android:layout_below="@+id/mgtv_btn2"
        android:background="@drawable/common_btn_background"
        android:gravity="center"
        android:text="@string/ijk"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mgtv_btn4"
        android:layout_below="@+id/mgtv_btn3"
        android:layout_width="@dimen/main_button_layout_width"
        android:layout_height="@dimen/main_button_layout_height"
        android:layout_marginLeft="@dimen/main_button_layout_marginLeft"
        android:layout_marginTop="@dimen/main_button_layout_child_marginTop"
        android:textSize="@dimen/main_button_textSize"
        android:background="@drawable/common_btn_background"
        android:gravity="center"
        android:text="@string/myPlayer"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/main_text_layout_marginLeft"
        android:layout_marginTop="@dimen/main_text_layout_marginTop"
        android:text="@string/text1"
        android:textColor="@color/xw_text"
        android:textSize="@dimen/main_text_textSize" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/main_text_layout_marginLeft"
        android:layout_marginTop="@dimen/main_text_layout_marginTop_fist"
        android:text="@string/text2"
        android:textColor="@color/xw_text"
        android:textSize="@dimen/main_text_textSize_other" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/main_text_layout_marginLeft"
        android:layout_marginTop="@dimen/main_text_layout_marginTop_second"
        android:text="@string/text3"
        android:textColor="@color/xw_text"
        android:textSize="@dimen/main_text_textSize_other" />


</RelativeLayout>